--- a/a/main.css
+++ b/a/main.css
@@ -3,6 +3,7 @@ body {
 	font-family: helvetica, sans-serif;
 	-webkit-text-size-adjust: none;
 	tab-size: 4;
+	line-height: 1.2;
 }
 * {
 	box-sizing: border-box;
