--- a/http/a/main.css
+++ b/http/a/main.css
@@ -150,23 +150,24 @@ fieldset {
 	height: calc(100% - 4px);
 }
 .program:nth-child(n+6) { display: none }
+.lim-programs .program:nth-child(n+4) { display: none }
 @media (min-width: 500px) {
 	.program { max-width: 49% }
 	.program:nth-child(-n+7) { display: inline-block }
 }
 @media (min-width: 900px) {
 	.program { max-width: 33% }
-	.program:nth-child(-n+10) { display: inline-block }
+	.program:nth-child(-n+10), .lim-programs .program:nth-child(4) { display: inline-block }
 }
 @media (min-width: 1300px) {
 	.program { max-width: calc(25% - 4px) }
 	.program div { height: 20vw }
-	.program:nth-child(-n+13) { display: inline-block }
+	.program:nth-child(-n+13), .lim-programs .program:nth-child(5) { display: inline-block }
 }
 @media (min-width: 1700px) {
 	.program { max-width: calc(20% - 4px) }
 	.program div { height: 16vw }
-	.program:nth-child(-n+16) { display: inline-block }
+	.program:nth-child(-n+16), .lim-programs .program:nth-child(6) { display: inline-block }
 }
 .comment { margin-top: 3px }
 .comment #up, .comment #dn { width: 18px }
@@ -200,15 +201,16 @@ h1:not(.title), h2:not(.title), h3:not(.title), h4:not(.title), h5:not(.title), 
 	font-weight: normal;
 	font-family: Verdana;
 }
+h1, aside h2, h2.underline { border-bottom: 1px solid #aaa }
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit }
 h1 {
-	border-bottom: 1px solid #aaa;
 	font-size: 1.5em;
 	line-height: 1;
 	padding-bottom: 1px;
 	vertical-align: bottom;
 }
 .comment h1, hr { border-bottom: none }
+.title { border: none }
 h2, h1.title, article h1 { font-size: 1.3em }
 h3, h2.title, article h2, article article h1 {
 	margin-top: .5em;
