--- a/http/learn/course.css
+++ b/http/learn/course.css
@@ -5,7 +5,10 @@ html, #content, #footer {
 #content { padding: 0 }
 a { color: inherit }
 #text-inner h1 { margin-top: .2em }
-h2 { margin-top: 0 }
+h2 {
+	margin-top: 0;
+	border-bottom: 1px dashed #aaa;
+}
 #html, #output {
 	width: 100%;
 	height: 50vmax;
