Bug fixes, all around

--- a/http/a/clean.css
+++ b/http/a/clean.css
@@ -1,14 +1,17 @@
-html { background: linear-gradient(rgba(20, 20, 20, .85), rgba(20, 20, 20, .85)), url('/a/background.png') no-repeat left center fixed }
+html { background: #000 }
 body {
 	font-family: helvetica, sans-serif;
 	-webkit-text-size-adjust: none;
 	tab-size: 4;
 	line-height: 1.2;
+	color: #eee;
 }
 * {
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-overflow-scrolling: touch;
+	-webkit-font-smoothing: antialiased;
+	font-smoothing: antialiased;
 }
 ::-webkit-input-placeholder {
 	color: #555;
@@ -55,18 +58,23 @@ body {
 .scrlx { overflow-x: auto }
 .scrly, #sidebar { overflow-y: auto }
 .br, .desc, aside.rit { border-radius: 4px }
-.hglt, .desc, .comment, section, article { background: rgba(255, 255, 255, .4) }
-.shglt, #content, #sidebar, #footer { background: rgba(255, 255, 255, .8) }
+.hglt, .desc, .comment, section, article { background: #333 }
+code { padding: 2px }
+.shglt { background: #444 }
 code, iframe:not([seamless]) { background: #fff }
-code { padding: 2px; }
 .mono, .ctrls { font-family: monospace }
 .ctrls a { padding: 0 2px }
-.grey, a.small, .c-sig, .ctrls a { color: #444 }
+.grey, a.small, .c-sig, .ctrls a { color: #aaa }
 small, a.small, a.grey, .c-sig > *, .c-sig, .ctrls a, footer { font-weight: normal }
 small, a.small, footer, .c-sig, .ctrls a { font-size: .85em } 
 .red { color: #f00 }
 .large { font-size: 1.2em }
 .larger, .ctrls { font-size: 1.4em }
+em {
+	color: #faa;
+	font-style: normal;
+}
+code { color: #000 }
 .ctrls {
 	top: 100%; right: -1px;
 	z-index: 1;
@@ -85,7 +93,7 @@ small, a.small, footer, .c-sig, .ctrls a { font-size: .85em }
 }
 .comment:not(:hover) .sctrls { opacity: .4 }
 .comment img { max-height: 200px }
-.c-sig > * { color: #666 }
+.c-sig, .c-sig > * { color: #ccc }
 .ctrls :hover { color: #000 }
 .ctrls :first-child.clkd { text-shadow: 1px 1px 1px #000; color: #e80 }
 .ctrls :nth-child(2):not(:last-child).clkd { color: #0e0 }
@@ -150,24 +158,23 @@ fieldset {
 	height: calc(100% - 4px);
 }
 .program:nth-child(n+6) { display: none }
-.lim-programs .program:nth-child(n+4) { display: none }
 @media (min-width: 500px) {
 	.program { max-width: 49% }
 	.program:nth-child(-n+7) { display: inline-block }
 }
 @media (min-width: 900px) {
 	.program { max-width: 33% }
-	.program:nth-child(-n+10), .lim-programs .program:nth-child(4) { display: inline-block }
+	.program:nth-child(-n+10) { display: inline-block }
 }
 @media (min-width: 1300px) {
 	.program { max-width: calc(25% - 4px) }
 	.program div { height: 20vw }
-	.program:nth-child(-n+13), .lim-programs .program:nth-child(5) { display: inline-block }
+	.program:nth-child(-n+13) { display: inline-block }
 }
 @media (min-width: 1700px) {
 	.program { max-width: calc(20% - 4px) }
 	.program div { height: 16vw }
-	.program:nth-child(-n+16), .lim-programs .program:nth-child(6) { display: inline-block }
+	.program:nth-child(-n+16) { display: inline-block }
 }
 .comment { margin-top: 3px }
 .comment #up, .comment #dn { width: 18px }
@@ -196,6 +203,7 @@ ul, ol, p { margin: 6px 0 2px 0 }
 	clear: both;
 }
 h1, h2, h3, h4, h5, h6 {
+	color: #fff;
 	margin-top: .2em; margin-bottom: .2em;
 	font-family: Tahoma, Helvetica;
 }
@@ -203,32 +211,34 @@ h1:not(.title), h2:not(.title), h3:not(.title), h4:not(.title), h5:not(.title), 
 	font-weight: normal;
 	font-family: Verdana;
 }
-h1, aside h2, h2.underline { border-bottom: 1px solid #aaa }
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit }
 h1 {
+	border-bottom: 1px solid #aaa;
 	font-size: 1.5em;
 	line-height: 1;
 	padding-bottom: 1px;
 	vertical-align: bottom;
 }
 .comment h1, hr { border-bottom: none }
-.title { border: none }
 h2, h1.title, article h1 { font-size: 1.3em }
 h3, h2.title, article h2, article article h1 {
 	margin-top: .5em;
 	font-size: 1.1em;
 }
 a, .ctrl {
-	color: #000;
+	color: #eee;
 	font-weight: bold;
 	text-decoration: none;
 	transition: color .2s;
 	cursor: pointer;
 }
-a:hover, .ctrl:hover { color: #15f }
-a:active, .ctrl:active { color: #02d }
-a.blk:hover { background: rgba(255, 255, 255, .2) }
-a.blk:hover:not(:active) { color: #002 }
+a:hover, .ctrl:hover { color: #4ff }
+a:active, .ctrl:active { color: #faa }
+.user a { color: #000 }
+.user a:hover { color: #15f }
+.user a:active { color: #02d }
+a.blk:hover { background: #222 }
+a.blk:hover:not(:active) { color: #ff2 }
 p a, .comment a { text-decoration: underline }
 .c-sig a, .ctrls a { text-decoration: none }
 input[type=text], input[type=password], textarea {
@@ -278,7 +288,7 @@ textarea {
 	max-height: 100%;
 	padding: 4px 6px;
 }
-#content { padding-bottom: 24px }
+#content { padding-bottom: 4px }
 #nav > .active { position: relative }
 #nav .unread:not(.active) {
 	background: #d00;
@@ -343,7 +353,7 @@ aside.rit { background: rgba(255, 255, 100, 0.5) }
 		margin-left: 6px;
 	}
 }
-@media (min-width: 380px) and (max-width: 1499px) { 
+@media (min-width: 380px) { 
 	#nav {
 		padding: 0;
 		text-align: right;
@@ -401,7 +411,7 @@ aside.rit { background: rgba(255, 255, 100, 0.5) }
 	}
 	#logo img { padding-bottom: 4px }
 }
-@media (min-width: 800px) and (max-width: 1499px) { 
+@media (min-width: 800px) { 
 	#cont { margin: 0 auto }
 	#logo { height: 2rem }
 	#nav > :nth-child(-n+5) { float: left }
@@ -416,69 +426,4 @@ aside.rit { background: rgba(255, 255, 100, 0.5) }
 	#nav nav:nth-child(4) { left: calc(14.125rem + 11px) }
 	#nav nav:nth-child(6) { left: calc(17rem + 32px) }
 	#nav :not(:hover) + nav:not(:hover) { display: none }
-}
-@media (min-width: 1500px) {
-	html { background-size: cover }
-	#cont { overflow: hidden }
-	#content, #footer { margin: 6px 6px 6px calc(4% + 150px) }
-	#content:nth-child(2):nth-last-child(3) {
-		float: left;
-		width: calc(-250px + 80%);
-	}
-	#sidebar {
-		float: right;
-		width: calc(86px + 16%);
-		margin: 6px 6px 6px 0;
-	}
-	#nav {
-		position: fixed;
-		display: table;
-		left: 0;
-		width: calc(4% + 144px); height: 200px;
-		text-align: left;
-		background: #181818;
-	}
-	#nav > :nth-child(7) { margin-top: 16px }
-	#nav > *, #nav form {
-		width: 100%;
-		padding-right: 24px;
-	}
-	#nav > :not(nav)::after {
-		position: absolute;
-		right: .5em;
-		content: '\276F';
-		color: #999;
-	}
-	#logo { height: 2rem }
-	#nav input { width: 100% }
-	#nav > .active::before {
-		content: '';
-		position: absolute;
-		left: 5px;
-		top: 3px;
-		bottom: 3px;
-		width: 3px;
-		background: #777;
-	}
-	#nav > :not(#logo):not(nav) {
-		position: relative;
-		padding-left: 16px;
-	}
-	#nav nav {
-		border-top: 1px solid #fff;
-		border-bottom: 1px solid #fff;
-		background: #000;
-		overflow: hidden;
-		height: 2rem;
-		transition: height 0.2s, border 0.15s;
-		padding-left: 32px;
-	}
-	#nav nav::before {
-		content: '＞';
-		color: #999;
-	}
-	#nav :not(.active):not(:hover) + nav:not(:hover) {
-		height: 0;
-		border: none;
-	}
 }
