Change clean.css highlight color to cream orange

--- a/http/a/clean.css
+++ b/http/a/clean.css
@@ -71,7 +71,7 @@ small, a.small, footer, .c-sig, .ctrls a { font-size: .85em }
 .large { font-size: 1.2em }
 .larger, .ctrls { font-size: 1.4em }
 em {
-	color: #faa;
+	color: #f96;
 	font-style: normal;
 }
 code { color: #000 }
