--- a/http/a/main.css
+++ b/http/a/main.css
@@ -473,6 +473,7 @@ aside.rit { background: rgba(255, 255, 100, 0.5) }
 		height: 2rem;
 		transition: height 0.2s, border 0.15s;
 		padding-left: 32px;
+		padding-right: 0;
 	}
 	#nav nav::before {
 		content: '＞';
