Put .score class and hidden .scrtrls into main.css

--- a/http/a/main.css
+++ b/http/a/main.css
@@ -31,7 +31,7 @@ body {
 }
 .blk { display: block }
 .ib { display: inline-block }
-[hidden], .target:not(:target) { display: none }
+[hidden], .target:not(:target), #content > .sctrls { display: none }
 .rel, .comment { position: relative }
 .abs, .ctrls { position: absolute }
 .fullwidth { width: 100% }
@@ -246,6 +246,45 @@ textarea {
 	margin: 3em;
 	color: #fff;
 }
+.score {
+	float: left;
+	display: block;
+	margin-right: 4px;
+	color: #f00;
+	padding: 0 4px;
+}
+.score[data-score="0"] { display: none }
+.score[data-score="1"] { color: #888 }
+.score[data-score="2"] { color: #666 }
+.score[data-score="3"] { color: #444 }
+.score[data-score="4"] { color: #222 }
+.score[data-score="5"] { color: #000 }
+.score[data-score="6"] { color: #001 }
+.score[data-score="7"] { color: #002 }
+.score[data-score="8"] { color: #003 }
+.score[data-score="9"] { color: #004 }
+.score[data-score="10"] { color: #005 }
+.score[data-score="11"] { color: #006 }
+.score[data-score="12"] { color: #007 }
+.score[data-score="13"] { color: #008 }
+.score[data-score="14"] { color: #009 }
+.score[data-score="15"] { color: #00a }
+.score[data-score="16"] { color: #00b }
+.score[data-score="17"] { color: #00c }
+.score[data-score="18"] { color: #00d }
+.score[data-score="19"] { color: #00e }
+.score[data-score="20"] { color: #00f }
+.score[data-score="21"] { color: #33f }
+.score[data-score="22"] { color: #66f }
+.score[data-score="23"] { color: #f90 }
+.score[data-score="24"] { color: #f80 }
+.score[data-score="25"] { color: #f70 }
+.score[data-score="26"] { color: #f60 }
+.score[data-score="27"] { color: #f50 }
+.score[data-score="28"] { color: #f40 }
+.score[data-score="29"] { color: #f30 }
+.score[data-score="30"] { color: #f20 }
+.score[data-score="31"] { color: #f10 }
 #nav {
 	padding: 0 2px 6px 2px;
 	font-size: 0;
