--- a/http/a/main.css
+++ b/http/a/main.css
@@ -91,7 +91,7 @@ small, a.small, footer, .c-sig, .ctrls a { font-size: .85em }
 .ctrls :first-child.clkd { text-shadow: 1px 1px 1px #000; color: #e80 }
 .ctrls :nth-child(2):not(:last-child).clkd { color: #0e0 }
 .ctrls :last-child { font-size: 0.9em }
-input[type=text].large, input[type=password].large { font-size: 1.3em }
+input[type=text].large, input[type=search].large, input[type=password].large { font-size: 1.3em }
 .comment > pre, .comment > blockquote, .comment > p { margin-bottom: 0 }
 blockquote {
 	border-left: 2px solid #f90;
@@ -238,7 +238,7 @@ a.blk:hover { background: rgba(255, 255, 255, .2) }
 a.blk:hover:not(:active) { color: #002 }
 p a, .comment a { text-decoration: underline }
 .c-sig a, .ctrls a { text-decoration: none }
-input[type=text], input[type=password], textarea {
+input[type=text], input[type=search], input[type=password], textarea {
 	font-family: helvetica;
 	font-size: .8em;
 }
@@ -471,15 +471,15 @@ aside.rit { background: rgba(255, 255, 100, 0.5) }
 		margin: 6px 6px 6px 0;
 	}
 	#nav {
-		position: fixed;
+		position: absolute;
 		display: table;
 		left: 0;
 		width: calc(4% + 144px); height: 200px;
 		text-align: left;
-		background: #181818;
+		background: #161616;
 	}
 	#nav > :nth-child(7) { margin-top: 16px }
-	#nav > *, #nav form {
+	#nav > *, #nav nav > *, #nav form {
 		width: 100%;
 		padding-right: 24px;
 	}
@@ -490,13 +490,14 @@ aside.rit { background: rgba(255, 255, 100, 0.5) }
 		color: #999;
 	}
 	#logo { height: 2rem }
-	#nav input { width: 100% }
+	#nav input {
+		width: 100%;
+		font-size: 1.3rem;
+	}
 	#nav > .active::before {
 		content: '';
 		position: absolute;
-		left: 5px;
-		top: 3px;
-		bottom: 3px;
+		top: 3px; bottom: 3px; left: 5px;
 		width: 3px;
 		background: #777;
 	}
@@ -504,22 +505,21 @@ aside.rit { background: rgba(255, 255, 100, 0.5) }
 		position: relative;
 		padding-left: 16px;
 	}
+	#nav > .active + nav { background: #000 }
 	#nav nav {
-		border-top: 1px solid #fff;
-		border-bottom: 1px solid #fff;
-		background: #000;
-		overflow: hidden;
-		height: 2rem;
-		transition: height 0.2s, border 0.15s;
 		padding-left: 32px;
-		padding-right: 0;
+		background: #161616;
 	}
-	#nav nav::before {
-		content: '＞';
-		color: #999;
+	#nav nav a {
+		display: block;
+		line-height: 2rem;
+		height: 2rem;
 	}
-	#nav :not(.active):not(:hover) + nav:not(:hover) {
-		height: 0;
-		border: none;
+	#nav nav a::before {
+		content: '＞ ';
+		color: #aaa;
 	}
+}
+@media (min-width: 1500px) and (min-height: 500px) {
+	#nav { position: fixed }
 }
