--- a/http/a/main.css
+++ b/http/a/main.css
@@ -108,6 +108,27 @@ code.blk {
 	hyphens: none;
 	-webkit-hyphens: none;
 }
+.md-err {
+	position: absolute;
+	display: inline-block;
+	margin-top: -1.3em;
+	background: #f00;
+	color: #fff;
+	padding: 2px 8px;
+	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+	animation: fadein 0.5s;
+	-webkit-animation: fadein 0.5s;
+}
+@keyframes fadein { 
+	from {
+		opacity: 0;
+	}
+}
+@-webkit-keyframes fadein { 
+	from {
+		opacity: 0;
+	}
+}
 h1 small, h2 small { font-size: .85rem }
 h1 small { margin: .5em }
 h2 small { margin: .2em .2em 0 0 }
