--- a/http/a/clean.css
+++ b/http/a/clean.css
@@ -67,7 +67,7 @@ iframe:not([seamless]) { background: #fff }
 .disabled, a.disabled:hover, a.disabled:active { color: #666 }
 abbr { border-bottom: 1px dashed #222 }
 .reference { color: #080 }
-small, a.small, a.grey, .c-sig > *, .c-sig, .ctrls a, footer { text-decoration: none }
+small, a.small, a.grey, .c-sig > *, .c-sig, .ctrls a, footer, #nav a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, .user a, .c-sig a, .ctrls a { text-decoration: none }
 small, a.small, footer, .c-sig, .ctrls a { font-size: .85em } 
 .red { color: #f00 }
 .large { font-size: 1.2em }
@@ -255,9 +255,6 @@ h3, h2.title, article h2, article article h1 {
 	margin-top: .5em;
 	font-size: 1.1em;
 }
-
-
-#nav a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { text-decoration: none }
 a, .ctrl {
 	color: #fff;
 	transition: color .1s;
@@ -272,8 +269,6 @@ a:active, .ctrl:active { color: #faa }
 a.blk { font-weight: bold }
 a.blk:hover, a.blk:active { background: #222 }
 a.blk:hover:not(:active) { color: #ff2 }
-p a, .comment a { text-decoration: underline }
-.c-sig a, .ctrls a { text-decoration: none }
 input[type=text], input[type=search], input[type=password], textarea {
 	font-family: helvetica;
 	font-size: .8em;
