--- a/http/a/main.css
+++ b/http/a/main.css
@@ -63,7 +63,7 @@ code { padding: 2px; }
 .ctrls a { padding: 0 2px }
 .grey, a.small, .c-sig, .ctrls a { color: #444 }
 .disabled, a.disabled:hover, a.disabled:active { color: #999 }
-small, a.small, a.grey, .c-sig > *, .c-sig, .ctrls a, footer { text-decoration: none }
+small, a.small, a.grey, .c-sig > *, .c-sig, .ctrls a, footer, #nav a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, .user a, .c-sig a, .ctrls a { text-decoration: none }
 small, a.small, footer, .c-sig, .ctrls a { font-size: .85em }
 abbr { border-bottom: 1px dashed #222 }
 .reference { color: #080 }
@@ -248,7 +248,6 @@ h3, h2.title, article h2, article article h1 {
 	margin-top: .5em;
 	font-size: 1.1em;
 }
-#nav a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { text-decoration: none }
 a, .ctrl {
 	color: #000;
 	transition: color .1s;
@@ -263,7 +262,6 @@ a.blk {
 }
 a.blk:hover, a.blk:active { background: rgba(255, 255, 255, .2) }
 a.blk:active { color: #00f }
-.c-sig a, .ctrls a { text-decoration: none }
 input[type=text], input[type=search], input[type=password], textarea {
 	font-family: helvetica;
 	font-size: .8em;
