--- a/http/a/main.css
+++ b/http/a/main.css
@@ -39,10 +39,10 @@ body {
 .rit, .user, h1 small, h2 small, .c-sig { float: right }
 .lft, .row > :not(.rit):not(.sidebar):not(.half):not(.program), .user > * { float: left }
 .nofloat { float: none }
-:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(article):not(small) > :first-child { margin-top: 0 }
+:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(article):not(small) > :first-child:not(span) { margin-top: 0 }
 .mar { margin: 6px }
 .nomar, body, input, .comment .hover *, fieldset, textarea, .error * { margin: 0 }
-.tumar, h1 + *, h2:not(.title) + *, h3:not(.title) + *, form *, .comment > blockquote:nth-child(2), .comment > pre:nth-child(2) { margin-top: 2px }
+.tumar, form *, .comment > blockquote:nth-child(2), .comment > pre:nth-child(2) { margin-top: 2px }
 .sumar:not(:first-child), :not(img) + .desc, .blk { margin-top: 4px }
 .umar:not(:first-child), :not(.row) > section:not(:first-child), article:not(:first-child), section:not(:first-child), form:not([action="/search/"]), #footer { margin-top: 6px }
 .bumar:not(:first-child), h1:not(:first-child), fieldset:not(:first-of-type) { margin-top: 8px }
@@ -113,6 +113,7 @@ code.blk {
 }
 .md-err {
 	position: absolute;
+	z-index: 1;
 	display: inline-block;
 	margin-top: -1.3em;
 	background: #f00;
@@ -141,8 +142,8 @@ fieldset {
 }
 .popup {
 	position: absolute;
-	top: 20%; right: 20%; left: 20%;
-	background: rgba(240, 240, 240, .95);
+	top: 6%; right: 6%; left: 6%;
+	background: #fff;
 	box-shadow: 1px 1px 8px #000;
 }
 .user {
