improve global search

--- a/http/a/main.css
+++ b/http/a/main.css
@@ -340,6 +340,11 @@ textarea {
 	width: 160px;
 	max-width: 100%;
 	color: #000;
+	font-size: 16px;
+}
+#nav input::-webkit-search-results-decoration { display: none }
+@media screen and(-webkit-min-device-pixel-ratio: 0) { /* Safari only */
+	#nav input::-webkit-search-results-decoration { display: block }
 }
 #logo img {
 	max-height: 100%;
@@ -523,10 +528,7 @@ aside.rit { background: rgba(255, 255, 100, 0.5) }
 		color: #999;
 	}
 	#logo { height: 2rem }
-	#nav input {
-		width: 100%;
-		font-size: 1.3em;
-	}
+	#nav input { width: 100% }
 	#nav > .active::before {
 		content: '';
 		position: absolute;
