--- a/http/a/main.css
+++ b/http/a/main.css
@@ -522,8 +522,8 @@ aside.rit { background: rgba(255, 255, 100, 0.5) }
 	}
 	#sidebar {
 		float: right;
-		width: calc(88px + 16%);
-		margin: 6px 6px 6px 0;
+		width: calc(94px + 16%);
+		margin: 6px 0;
 	}
 	#nav {
 		position: absolute;
