--- a/http/a/clean.css
+++ b/http/a/clean.css
@@ -81,6 +81,19 @@ small, a.small, footer, .c-sig, .ctrls a { font-size: .85em }
 	color: #aaa;
 	transition: opacity 0.2s;
 }
+.connection-error {
+	margin-top: 4px;
+	background: red;
+	color: #fff;
+	font-size: 1.5em;
+	padding: 2px 8px;
+	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+	animation: fadein .5s;
+	-webkit-animation: fadein .5s;
+}
+.connection-error a, .connection-error a:visited { color: #ffb }
+.connection-error a:hover { color: #ffd }
+.connection-error a:active { color: #fda }
 code {
 	padding: 2px;
 	color: #fff;
